Added layouts for app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mydarkblue">#FF191A2C</color>
+    <color name="mypink">#FFF96893</color>
+    <color name="pinky">#DFF6628E</color>
 </resources>
