--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MobilnaAplikacija" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MobilnaAplikacija" parent="Theme.MaterialComponents.Light.NoActionBar" />
+    <!-- Base application theme. -->
+    <style name="Theme.BottomNavigation" parent="Theme.MaterialComponents">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/mypink</item>
+        <item name="colorPrimaryVariant">@color/mypink</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+               <item name="colorSecondary">@color/mydarkblue</item>
+              <item name="colorSecondaryVariant">@color/mydarkblue</item>
+              <item name="colorOnSecondary">@color/black</item>
+              <!-- Status bar color. -->
+               <item name="android:statusBarColor">@color/mydarkblue</item>
+              <!-- Customize your theme here. -->
+    </style>
 </resources>
